# Ml-churn

./: .gitignore  Documentation.html  Extraction_donnees.ipynb  README.md  Structure.md  project-summury.md  pyproject.toml  render.yaml  requirements.txt  untitled.html
.github/workflows/: ci-cd.yml
api/: Dockerfile  requirements.txt
api/app/: main.py  schemas.py  serializer.py
data/processed/: eda_summary.json  submission.csv  y_train.csv  y_val.csv
deployment/: RMDAE_deployment.md  app.py  docker-compose.yml  requirements.txt  test_api.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: BatchPrediction.jsx  Header.jsx  RiskGauge.jsx  SinglePrediction.jsx  ValidationMode.jsx
models/: pipeline_cleaning.pkl  pipeline_encoding.pkl  pipeline_features.pkl  pipeline_scaling.pkl
models/saved_models/: best_model_lightgbm.pkl  model_results_lightgbm.pkl  models_comparison.csv
notebooks/: churn_01_analyse_exploratoire.ipynb  churn_02_preprocessing.ipynb  churn_03_modelisation.ipynb  churn_04_evaluation.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
src/: data_loader.py  data_preprocessing.py  manual_balancing.py  model_training.py
tests/: conftest.py  test_api.py  test_preprocessing.py
